# amqp-tail

./: .gitignore  LICENSE  Makefile  README.md  amqp-tail.cabal  package.yaml
src/: Main.hs
