name:                amqp-tail
version:             0.1.0.0
synopsis:            View AMQP messages.
description:         Please see README.md
homepage:            http://github.com/name/project
license:             BSD3
license-file:        LICENSE
-- copyright:           
category:            System
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10


executable amqp-tail

  hs-source-dirs:      src

  main-is:             Main.hs

  other-modules:       

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -O2

  build-depends:       base
                     , amqp
                     , bytestring
                     , optparse-applicative
                     , text
                     , utf8-string

  default-language:    Haskell2010
